/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package android.sqlite.inspection;
option java_package = "com.android.tools.sql.protocol";
option java_outer_classname = "SqliteInspection";

message Column {
  string name = 1;
  string type = 2;
}

message Cursor {
    repeated Row rows = 2;
}

message Row {
    repeated CellValue values = 1;
}

message CellValue {
    oneof union {
        float float_value = 1;
        int32 int_value = 2;
        string string_value = 3;
        bytes blob_value = 4;
    }
    string column_name = 5;
}

message Table {
  string name = 1;
  repeated Column columns = 2;
}

message Schema {
  repeated Table tables = 1;
}


message TrackDatabasesCommand {
}

message TrackDatabasesResponse {
}

message Events {
    oneof union {
        DatabaseOpenedEvent database_open = 1;
        TableUpdatedEvent table_update = 2;
    }
}

message DatabaseOpenedEvent {
    int32 id = 1;
    string name = 2;
}

message TableUpdatedEvent {
    int32 id = 1;
    string table_name = 2;
}

message GetSchemaCommand {
    int32 id = 1;
}

message SchemaResponse {
    Schema schema = 1;
}

message QueryCommand {
    int32 databaseId = 1;
    string query = 2;
    repeated string affected_tables = 3;
}

message ExecCommand {
    int32 databaseId = 1;
    string query = 2;
}

message Commands {
    oneof OneOf {
        TrackDatabasesCommand track_databases = 1;
        GetSchemaCommand get_schema = 2;
        QueryCommand query = 3;
        ExecCommand exec = 4;
    }
}
